# FL24-project-group-9

./: .gitignore  README.md  docker-compose-release.yaml  docker-compose.yaml  kind-cluster.yaml  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.release  README.md  db.sqlite3  docker-compose.yaml  editorconfig  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_student_majors_remove_minor_required_courses_and_more.py  0003_alter_course_prerequisites.py  0004_alter_course_description_remove_course_prerequisites_and_more.py  0005_alter_student_career_alter_student_interests_and_more.py  0006_alter_course_description_and_more.py  0007_alter_program_required_courses.py  0008_alter_program_required_courses.py  0009_semester_planned_credits_alter_semester_id_and_more.py  0010_alter_program_required_courses.py  0011_alter_student_options_alter_student_managers_and_more.py  0012_alter_semester_iscompleted_alter_student_email_and_more.py  0013_alter_student_username.py  0014_alter_student_username.py  0015_remove_student_joined_alter_student_grad.py  0016_alter_student_grad.py  0017_review.py  0018_course_embedding_student_embedding.py  0019_course_attributes_alter_semester_planned_credits.py
backend/auth/: serializers.py  tests.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/data-scraper/: CS Major Data.json  CS Minor Data.json  course fix.py  courseScraper.py  course_data_transformation.py  course_fix.py  course_scraper.py  courses_data.json  cs_requirements.json  default_semester.json  department_scraper.py  departments_data.json  fixed_courses_data.json  program scraper.py  programScraper.py  program_scraper.py  programs_data.json  requirementsScraper.py  requirements_scraper.py  sample_semester.json  scraper copy.py  scraper.py  washu_courses_data_fixed.json  washu_major_data.json  washu_minor_data.json  washu_program_data.json
backend/database/: models.py
backend/database/db functions/: neo4j.py
backend/database/migrations/: 0001_initial.py
backend/openai/: course_embeddings_generation.py  main.py  prompt.py  utils.py
backend/openai_integration/: course_embeddings_generation.py  playground.py  prompt.py  sample_generated_schedule.json  sample_student_embeddings.json  utils.py
frontend/: .prettierrc.json  (+10 more)
(+111 files in other folders)
